Color contrast, html, code fixes

--- a/src/styles/_reset.css
+++ b/src/styles/_reset.css
@@ -1,7 +1,3 @@
-html {
-    box-sizing: border-box;
-}
-
 *,
 *::before,
 *::after {
@@ -23,8 +19,4 @@ ol, ul {
 img {
   max-width: 100%;
   height: auto;
-}
-
-a {
-  text-decoration: none;
 }
