--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,4 +1,5 @@
 html {
+    box-sizing: border-box;
     font-family: 'Karla';
     color: var(--color-base-font);
     font-size: var(--font-size-base);
@@ -7,6 +8,7 @@ html {
 }
 
 a {
+    text-decoration: none;
     color: var(--color-default-link);
 }
 
